<resources>
    <string name="app_name">CursoKotlin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_firts_app">FirtsAppActivity</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="age">Edad</string>
    <string name="weight">Peso</string>
    <string name="calculate">Calcular</string>
    <string name="title_todo_app">TodoApp</string>
</resources>