<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".calculadoraimc.CalculadoraImcActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/male"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_male"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/female"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/male"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/male">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="250" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/txtWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="38sp"
                tools:text="60 kg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_subtractionWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_subtraction"
                    app:backgroundTint="@color/purple_500"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_plusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/purple_500"
                    app:tint="@color/white" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@+id/cvHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="38sp"
                tools:text="60 años" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_subtractionAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_subtraction"
                    app:backgroundTint="@color/purple_500"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_plusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/purple_500"
                    app:tint="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintCircleRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/calculate"/>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- la propiedad app:tint = color sirve para cambiar el color a las imagenes-->